# house-price-platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
api/: main.py  schemas.py
assets/: README.md
config/: config.yaml
dashboard/: app.py
docs/: 01_business_understanding.md  02_data_profiling.md
models/: feature_names.json  model_registry.json
notebooks/: 01_exploration.ipynb
reports/: metrics.json
src/deployment/: health_check.py
src/explainability/: shap_explainer.py
src/feature_engineering/: features.py  selection.py
src/pipelines/: data_ingestion.py
src/prediction/: predictor.py
src/preprocessing/: cleaning.py  pipeline.py
src/training/: hyperparameter_tuning.py  mlflow_tracking.py  model_factory.py  trainer.py
src/utils/: config.py  logger.py
src/visualization/: eda_plots.py  evaluation_plots.py
tests/: conftest.py  test_api.py  test_cleaning.py  test_feature_engineering.py  test_model_factory.py  test_predictor.py  test_preprocessing_pipeline.py  test_utils.py
