[tool.poetry]
name = "house-price-platform"
version = "1.0.0"
description = "Enterprise-grade end-to-end House Price Prediction Platform"
authors = ["Data Science Team <team@houseprice-platform.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
xgboost = "^2.1.0"
lightgbm = "^4.4.0"
catboost = "^1.2.5"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
seaborn = "^0.13.2"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
streamlit = "^1.36.0"
shap = "^0.45.1"
mlflow = "^2.14.1"
joblib = "^1.4.2"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
pyyaml = "^6.0.1"
scipy = "^1.13.1"
optuna = "^3.6.1"
python-multipart = "^0.0.9"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
